@@ -37,5 +37,7 @@ S3method(dim, loddsratio)
 S3method(dimnames, loddsratio)
 S3method(print, loddsratio)
 S3method(vcov, loddsratio)
+S3method(as.matrix, loddsratio)
+S3method(as.array, loddsratio)
 
 
